<resources>
    <string name="app_name">Heros Gitterbox</string>
    <string name="title_nav_boxes">Container</string>
    <string name="title_nav_qrscanner">QR</string>
    <string name="title_nav_items">Ausrüstung</string>
    <string name="location">Standort</string>
    <string name="content">Inhalt</string>
    <string name="container">Container</string>
    <string name="edit_box_markings">Markierungen</string>
    <string name="edit_box_id">ID / Nummer *</string>
    <string name="edit_box_name">Name *</string>
    <string name="edit_box_description">Beschreibung / Notizen</string>
    <string name="edit_box_status">Status / Tags hinzufügen</string>
    <string name="edit_box_location_details">Standort Details</string>
    <string name="edit_box_add">Hinzufügen</string>
    <string name="edit_box_title">Box Daten</string>
    <string name="edit_box_status_helper">Zum Hinzufügen ; oder Enter drücken</string>
    <string name="edit_box_qrcode">QR-Code *</string>
    <string name="edit_box_qrcode_helper">Achtung: Durch eine Änderung werden die QR-Codes auf den ausgedruckten Labels ungültig</string>
    <string name="dialog_add">Hinzufügen</string>
    <string name="dialog_cancel">Abbrechen</string>
    <string name="dialog_invnum">Inventarnummer / Detail</string>
    <string name="dialog_yes">Ja</string>
    <string name="dialog_no">Nein</string>
    <string name="sheet_export_done">PDF ist bereit</string>
    <string name="sheet_export_loading">PDF wird erstellt...</string>
    <string name="sheet_export_save">Speichern</string>
    <string name="sheet_export_share">Teilen</string>
    <string name="login_btn">Login</string>
    <string name="password_hint">Passwort</string>
    <string name="user_hint">Benutzername</string>
    <string name="containing_box">Enthalten in:</string>
    <string name="containing_box_empty">In keinem Container enthalten</string>
    <string name="invnums_label">Inventarnummern / Details:</string>
    <string name="item_edit_tags_title">Tags</string>
    <string name="item_edit_description">Beschreibung / Notizen</string>
    <string name="item_edit_name">Bezeichnung *</string>
    <string name="item_edit_title">Allgemeine Daten (Pflichtfelder)</string>
    <string name="item_edit_image">Foto</string>
    <string name="press_back_again_to_exit">Zum Verlassen nochmal ZURÜCK klicken</string>
    <string name="edit_box_color">Farbmarkierung ändern</string>
    <string name="edit_item_color">Farbe</string>
    <string name="edit_item_invnum">InvNr./Detail</string>
    <string name="dialog_dismiss_title">Änderungen Verwerfen?</string>
    <string name="dialog_dismiss_text">Alle nicht gespeicherten Änderungen gehen verloren.</string>
    <string name="dialog_save_title">Änderungen Speichern?</string>
    <string name="dialog_save_text">Alte Daten werden überschrieben.</string>
    <string name="error_field_empty">Feld darf nicht leer sein</string>
    <string name="error_box_already_exists_id">Es existiert bereits ein Container mit dieser ID</string>
    <string name="error_box_already_exists_qrcode">Es existiert bereits ein Container mit diesem QR-Code</string>
    <string name="fragment_box_edit_title">Container bearbeiten</string>
    <string name="fragment_box_edit_title_new">Container erstellen</string>
    <string name="dialog_delete_box_title">Container Löschen?</string>
    <string name="dialog_delete_box_text">Container wirklich löschen?</string>
    <string name="dialog_add_invnr_title">Inventarnummer / Detail Hinzufügen</string>
    <string name="error_dialog_invnr_empty">Feld nicht leer sein</string>
    <string name="error_dialog_invnr_invalid">Feld darf kein ; enthalten</string>
    <string name="fragment_item_edit_title">Gegenstand erstellen</string>
    <string name="fragment_item_edit_title_new">Gegenstand bearbeiten</string>
    <string name="dialog_delete_item_title">Gegenstand Löschen?</string>
    <string name="dialog_delete_item_text">Achtung: Beim Löschen wird der Geegenstand automatisch aus allen Containern entfernt</string>
    <string name="permission_camera_request">Kamera Zugriff wird benötigt, um den QR- Scanner zu nutzen</string>
    <string name="error_qrcode_invalid">QR-Code ungültig</string>
    <string name="error_start_camera">Kamera konnte nicht gestartet werden</string>
    <string name="login_successful">Login erfolgreich</string>
    <string name="error_check_username">Benutzernamen überprüfen</string>
    <string name="error_check_password">Passwort überprüfen</string>
    <string name="error_login_failed">Login Fehlgeschlagen</string>
    <string name="item_details_title">Ausrüstung</string>
    <string name="error_no_write_permission">Keine Berechtigung für diese Aktion</string>
    <string name="pdf_share_label">PDF Label teilen</string>
    <string name="pdf_saved_in_downloads">PDF in Downloads gespeichert</string>
    <string name="pdf_open_with">PDF öffnen mit</string>
    <string name="pdf_item_amount">Anz.</string>
    <string name="pdf_item_name">Gegenstand</string>
    <string name="pdf_item_invnr">InvNr. / Detail</string>
    <string name="btn_search">Suche</string>
    <string name="btn_sort">Sortieren</string>
    <string name="btn_add_box">Neu</string>
    <string name="btn_print">Drucken</string>
    <string name="btn_edit">Bearbeiten</string>
    <string name="btn_delete">Löschen</string>
    <string name="btn_save">Speichern</string>
    <string name="btn_cancel">Abbrechen</string>
    <string name="content_description_box_image">Container Foto</string>
    <string name="content_description_title">Titel</string>
    <string name="content_description_description">Beschreibung</string>
    <string name="content_description_item_image">Ausrüstung Foto</string>
    <string name="content_description_location">Standort</string>
    <string name="content_description_location_image">Standort Foto</string>
    <string name="dialog_order_by_name">Name</string>
    <string name="dialog_order_by_id">ID / Nummer</string>
    <string name="dialog_order_by_location">Standort</string>
    <string name="dialog_order_by_vehicle">Fahrzeug</string>
    <string name="dialog_order_by_status">"Status / Tags"</string>
    <string name="dialog_order_by_color">Farbmarkierung</string>
    <string name="dialog_sort_title">Sortieren Nach</string>
    <string name="drawer_logout">Ausloggen</string>
    <string name="drawer_settings">Einstellungen</string>
    <string name="username">Benutzername</string>
    <string name="dialog_order_by_latest">Zuletzt Hinzugefügt</string>
    <string name="dialog_order_ascending">Aufsteigend (A-Z)</string>
    <string name="dialog_order_descending">Absteigend (Z-A)</string>
    <string name="task_cancelled">Abgebrochen</string>
    <string name="error_store_file_in_downloads">Fehler: Datei konnte nicht gespeichert werden.</string>
    <string name="drawer_organizations_title">Einheiten</string>
    <string name="demo_btn">Demo</string>
    <string name="error_demo_failed">Demo Account nicht verfügbar</string>
    <string name="error_item_edit_field">Bezeichnung darf nicht leer sein</string>
    <string name="error_box_edit_field">Ungültige Felder  - Bitte Eingaben überprüfen</string>
    <string name="error_qrcode_org_no_permission">Fehler. QR-Code gehört zu einer privaten Einheit.</string>
    <string name="qrcode_belongs_other_org">Dieser QR-Code gehört zur Einheit "'"</string>
    <string name="qrcode_change_org">"'". Einheit wechseln?</string>
    <string name="qrcode_change_org_btn">Wechseln</string>
    <string name="title_nav_vehicles">Fahrzeuge</string>
    <string name="content_description_vehicle_image">Fahrzeug Foto</string>
    <string name="vehicle_containing_boxes">Geladene Container</string>
    <string name="vehicle_empty">Keine Container auf Fahrzeug</string>
    <string name="vehicle_edit_title">Fahrzeugdaten</string>
    <string name="vehicle_edit_name">Name *</string>
    <string name="vehicle_edit_callname">Funkrufname</string>
    <string name="vehicle_edit_parkingspot">Stellplatz</string>
    <string name="dialog_order_vehicles_by_name">Name</string>
    <string name="dialog_order_vehicles_by_callname">Funkrufname</string>
    <string name="dialog_order_vehicles_by_parking_spot">Stellplatz</string>
    <string name="content_description_parking_spot">Stellplatz</string>
    <string name="dialog_delete_vehicle_title">Fahrzeug Löschen?</string>
    <string name="dialog_delete_vehicle_text">Soll das Fahrzeug wirklich gelöscht werden?</string>
    <string name="error_vehicle_edit_field">Fahrzeugname darf nicht leer sein</string>
    <string name="fragment_vehicle_edit_title">Fahrzeug bearbeiten</string>
    <string name="fragment_vehicle_edit_title_new">Fahrzeug erstellen</string>
    <string name="vehicle_details_title">Fahrzeug Details</string>
    <string name="vehicle">Fahrzeug</string>
    <string name="location_details">Standort Details</string>
    <string name="error_no_vehicle_assigned">nicht zugeordnet</string>
    <string name="vehicle_location_label">Fahrzeug / Standort</string>
    <string name="edit_item_status">Tags hinzügen</string>
    <string name="edit_box_type">Typ (Box, Regal, Staufach...)</string>
    <string name="content_amount_label">Stück</string>
    <string name="activity_settings_title">Einstellungen</string>
    <string name="preferences_title_category_pdf">PDF Ausdruck Elemente</string>
    <string name="preferences_title_category_general">Allgemein</string>
    <string name="pdf_address_summary">In Fußzeile angezeigt</string>
    <string name="pdf_address_title">Adresse</string>
    <string name="pdf_title_title">Titel</string>
    <string name="pdf_title_summary">In Kopfzeile angezeigter Titel</string>
    <string name="pdf_subtitle_title">Untertitel</string>
    <string name="pdf_subtitle_summary">Unterhalb des Titles angezeigt</string>
    <string name="pdf_logo_left_title">Logo Links</string>
    <string name="pdf_logo_left_summary">In Kopfzeile angezeigtes Logo, links vom Titel / Untertitel</string>
    <string name="pdf_logo_right_title">Logo Rechts</string>
    <string name="pdf_logo_right_summary">In Kopfzeile angezeigtes Logo, rechts am Seitenrand</string>
    <string name="pick_a_color">Farbe wählen</string>
    <string name="content_amount_title">Gesamtzahl:</string>
    <string name="content_availability_taken_title">Entnommen:</string>
    <string name="dialog_order_by_completeness">Vollständigkeit</string>
    <string name="snackbar_update_ready">Update ist bereit</string>
    <string name="snackbar_btn_install">Installieren</string>
    <string name="changelog_1_2_slide1_text">Update 1.2 ist da und bringt neben neuen Funktionen auch viele kleine Verbesserungen.</string>
    <string name="changelog_1_2_slide2_title">Fahrzeuge</string>
    <string name="changelog_1_2_slide2_text">Es gibt eine neue Hauptansicht, in der Fahrzeuge angelegt und verwaltet werden können. Jede Box kann nun einem bestimmten Fahrzeug zugewiesen werden.</string>
    <string name="changelog_1_2_slide3_title">Einstellungen</string>
    <string name="changelog_1_2_slide3_text">In den Einstellungen einer Einheit können jetzt Texte / Logos gesetzt werden, die bei der Erstellung des PDF Ausdrucks verwendet werden.\nDiese Einstellungen synchronisieren sich automatisch mit allen anderen Geräten.</string>
    <string name="setting_animation_title">Animationen</string>
    <string name="setting_animation_summary">Übergänge zwischen verschiedenen Ansichten</string>
    <string name="dialog_box">Container</string>
    <string name="dialog_compartment">Fach</string>
    <string name="radio_btn_delete">Löschen</string>
    <string name="radio_btn_move">Verschieben</string>
    <string name="dialog_delete_compartment_descr">Was soll mit den beinhalteten Gegenständen passiern?</string>
    <string name="dialog_compartment_new">Neues Fach</string>
    <string name="drawer_bug_report">Fehler melden</string>
</resources>