<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <RadioGroup
        android:id="@+id/radioButtonGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioButtonOrderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_order_by_id" />

        <RadioButton
            android:id="@+id/radioButtonOrderId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_order_by_name" />

        <RadioButton
            android:id="@+id/radioButtonOrderLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_order_by_location" />

        <RadioButton
            android:id="@+id/radioButtonOrderStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_order_by_status" />

        <RadioButton
            android:id="@+id/radioButtonOrderColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_order_by_color" />
    </RadioGroup>
</FrameLayout>