<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/drawerGroupStatic"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/drawer_logout" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:checkable="false"
            android:title="@string/drawer_settings" />
        <item
            android:id="@+id/nav_bug_report"
            android:icon="@drawable/ic_baseline_bug_report_24"
            android:checkable="false"
            android:title="@string/drawer_bug_report" />
    </group>
    <item android:title="@string/drawer_organizations_title">
        <menu>
            <group
                android:id="@+id/drawer_group_organizations"
                android:checkableBehavior="single">
            </group>
        </menu>
    </item>

</menu>