<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_btn_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/btn_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"></item>
    <item
        android:id="@+id/home_btn_sort"
        android:icon="@drawable/ic_baseline_sort_24"
        android:title="@string/btn_sort"
        app:showAsAction="always|collapseActionView"></item>
    <item
        android:id="@+id/home_btn_add"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/btn_add_box"
        app:showAsAction="always"></item>
</menu>