<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <RadioGroup
            android:id="@+id/radioButtonVehicleGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <RadioButton
                android:id="@+id/radioButtonVehiclesOrderName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/dialog_order_vehicles_by_name" />

            <RadioButton
                android:id="@+id/radioButtonVehiclesOrderCallname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_order_vehicles_by_callname" />

            <RadioButton
                android:id="@+id/radioButtonVehiclesOrderParkingSpot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_order_vehicles_by_parking_spot" />
        </RadioGroup>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/sort_verhicles_divider"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:id="@+id/radioButtonGroupVehiclesAscDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/radioButtonVehiclesOrderAscending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/dialog_order_ascending" />

            <RadioButton
                android:id="@+id/radioButtonVehiclesOrderDescending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_order_descending" />
        </RadioGroup>
    </LinearLayout>
</FrameLayout>