<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:paddingTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_delete_compartment_descr" />

        <RadioGroup
            android:paddingTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/dialog_del_comp_radio_delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_btn_delete" />

            <RadioButton
                android:id="@+id/dialog_del_comp_radio_move"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/radio_btn_move" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/dialog_del_move_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="8dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_box"
                android:paddingLeft="16dp">

                <AutoCompleteTextView
                    android:id="@+id/dialog_del_comp_dropdown_box"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/dialog_box" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dialog_compartment"
                android:paddingLeft="16dp"
                android:paddingTop="8dp">

                <AutoCompleteTextView
                    android:id="@+id/dialog_del_comp_dropdown_compartment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:paddingTop="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/dialog_compartment" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dialog_move_item_new_compartment_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="16dp"
                android:visibility="gone"
                android:hint="@string/dialog_compartment_new">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/dialog_move_item_new_compartment"
                    android:layout_width="match_parent"
                    android:maxLines="1"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>
</FrameLayout>